--- a/Lab01/4.html
+++ b/Lab01/4.html
@@ -21,7 +21,17 @@ var library = [
 	{ prof: 'Asaad Saad', course: 'Web Application Programming', courseID: 'CS452'}
 	]
 	*/
-  library.sort(function(a,b){
+ /* library.sort(function(a,b){
+    if(a.course == b.course)
+      return 0;
+    if(a.course < b.course)
+    return -1;
+    if(a.course > b.course)
+    return 1;
+  });*/
+
+   // using fat arrow
+    library.sort((a,b)=>{
     if(a.course == b.course)
       return 0;
     if(a.course < b.course)
